objects/bofc__BOFCReportResults__c.object
<CustomObject>
    <fields>
        <fullName>bofc__Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__OName__c</fullName>
        <label>OName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__RAPIName__c</fullName>
        <label>RAPIName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__RID__c</fullName>
        <label>RID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__RName__c</fullName>
        <label>RName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Report Column</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>BOFCReportResults</label>
    <nameField>
        <label>BOFCReportResults Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOFCReportResults</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>